fixed buttons in hover options being too wide. 0.7.1

--- a/src/public/scss/components/_hover-options.scss
+++ b/src/public/scss/components/_hover-options.scss
@@ -14,7 +14,7 @@
   background-color: rgba(black, .4);
   text-align: center;
   overflow-y: auto;
-  overflow-x: auto;
+  overflow-x: hidden;
   > * {
     display: inline-block;
     margin: .5*$em 0;
